--- a/index.html
+++ b/index.html
@@ -32,11 +32,8 @@ a {
         </td>
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 70%; border: 0px;">
            <p style="font-size:200%; text-align:justify">
-           Marie-Caroline Corbineau 
-    <p style="font-size:100%; text-align:right">
-     <a href="https://github.com/mccorbineau">Github</a> 
-     <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a> <br />
-    </p>
+           Marie-Caroline Corbineau <span style="font-size:100%; text-align:justify"> <a href="https://github.com/mccorbineau">Github</a> 
+                    <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a> <br /> </span>
            </p>
            <p style="width:75%; border-collapse:collapse; font-size:100%; text-align:justify">
     
