--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@ a {
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 15%; border: 0px;">
         </td>
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 70%; border: 0px;">
-           <p style="font-size:200%; text-align:justify">
+           <div style="font-size:200%; text-align:justify">
            Marie-Caroline Corbineau <span style="font-size:100%; text-align:justify"> <a href="https://github.com/mccorbineau">Github</a> 
                     <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a> <br /> </span>
-           </p>
+           </div>
            <p style="width:75%; border-collapse:collapse; font-size:100%; text-align:justify">
     
             I am a Ph.D. student in Mathematics and Computer Science at <a href="http://cvn.centralesupelec.fr/">Centre de Vision Num&eacute;rique</a>, 
