--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@ a {
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 15%; border: 0px;">
         </td>
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 70%; border: 0px;">
-           <div style="font-size:200%; text-align:justify">
-               <br /> <br /> <br />
-           Marie-Caroline Corbineau <span style="font-size:60%; align:right"> <a href="https://github.com/mccorbineau">Github</a> 
-                    &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a> <br /> </span>
+           <div style="font-size:200%; float:left">
+               <br /> <br /> <br /> Marie-Caroline Corbineau 
            </div>
+           <div style="font-size:60%; align:right"> 
+                    <a href="https://github.com/mccorbineau">Github</a> 
+                    &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a> <br /> 
+           </div>
+           
            <p style="width:75%; border-collapse:collapse; font-size:100%; text-align:justify">
     
             I am a Ph.D. student in Mathematics and Computer Science at <a href="http://cvn.centralesupelec.fr/">Centre de Vision Num&eacute;rique</a>, 
