--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@ a {
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 70%; border: 0px;">
            <div style="font-size:200%; float:left">
                <br /> <br /> <br /> Marie-Caroline Corbineau 
-           </div>
-           <div style="font-size:60%; align:right"> 
+           <span style="font-size:60%; align:right"> 
                     <a href="https://github.com/mccorbineau">Github</a> 
                     &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a> <br /> 
+           </span>
            </div>
            
            <p style="width:75%; border-collapse:collapse; font-size:100%; text-align:justify">
