--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@ a {
                <br /> <br /> <br /> Marie-Caroline Corbineau 
            <span style="font-size:60%; align:right"> 
                     <a href="https://github.com/mccorbineau">Github</a> 
-                    &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a> <br /> 
+                    &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a>  
            </span>
            </div>
-           
-           <p style="width:75%; border-collapse:collapse; font-size:100%; text-align:justify">
-    
+           <p style="width:100%; border-collapse:collapse; font-size:100%; text-align:justify">
+            <br />
             I am a Ph.D. student in Mathematics and Computer Science at <a href="http://cvn.centralesupelec.fr/">Centre de Vision Num&eacute;rique</a>, 
             <a href="http://www.centralesupelec.fr/">CentraleSup&eacute;lec</a>, 
             <a href="http://universite-paris-saclay.fr/">Universit&eacute; Paris-Saclay</a>, France, 
