--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@ a {
                     <a href="https://github.com/mccorbineau">Github</a> 
                     &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a>  
            </span>
-           </div>
-           <p style="width:100%; border-collapse:collapse; font-size:100%; text-align:justify">
+           <span style="width:100%; border-collapse:collapse; font-size:100%; text-align:justify">
             <br />
             I am a Ph.D. student in Mathematics and Computer Science at <a href="http://cvn.centralesupelec.fr/">Centre de Vision Num&eacute;rique</a>, 
             <a href="http://www.centralesupelec.fr/">CentraleSup&eacute;lec</a>, 
@@ -48,7 +47,8 @@ a {
             My interests include applied mathematics, optimization algorithms, optimization-based neural networks, machine learning,
             image processing and applications related to aerospace engineering, in particular space science and Earth observation.
             More details about my background can be found in my resume [<a href="/CV_english.pdf">CV</a>]. 
-           </p>
+           </span>
+          </div>
         </td>
        </tr>
       </tbody>
