--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@ a {
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 15%; border: 0px;">
         </td>
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 70%; border: 0px;">
-            <span style="font-size:200%; float:left">
+            <span style="font-size:200%; float:left;display: inline-block">
                <br /> <br /> <br /> Marie-Caroline Corbineau 
-           <span style="font-size:60%; float:right"> 
+           <span style="font-size:60%; float:right;display: inline-block"> 
                     <a href="https://github.com/mccorbineau">Github</a> 
                     &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a>  
            </span>
-           <span style="border-collapse:collapse; font-size:50%; text-align:justify">
+           <span style="border-collapse:collapse; font-size:50%; text-align:justify; display: inline-block">
             <br />
             I am a Ph.D. student in Mathematics and Computer Science at <a href="http://cvn.centralesupelec.fr/">Centre de Vision Num&eacute;rique</a>, 
             <a href="http://www.centralesupelec.fr/">CentraleSup&eacute;lec</a>, 
