--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@ a {
        <tr>
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 15%; border: 0px;">
         </td>
-        <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 70%; border: 0px;">
-            <span style="font-size:200%; float:left;display: inline-block">
-               <br /> <br /> <br /> Marie-Caroline Corbineau 
+        <td style="font-size:200%;background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 70%; border: 0px;">
+           Marie-Caroline Corbineau 
            <span style="font-size:60%; float:right;display: inline-block"> 
                     <a href="https://github.com/mccorbineau">Github</a> 
                     &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a>  
@@ -48,7 +47,6 @@ a {
             image processing and applications related to aerospace engineering, in particular space science and Earth observation.
             More details about my background can be found in my resume [<a href="/CV_english.pdf">CV</a>]. 
            </span>
-          </span>
         </td>
        </tr>
       </tbody>
