--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@ a {
         </td>
         <td style="font-size:200%;background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 70%; border: 0px;">
            Marie-Caroline Corbineau 
-           <span style="font-size:60%; float:right;display: inline-block"> 
+           <span style="font-size:60%; float:right;width: 70%"> 
                     <a href="https://github.com/mccorbineau">Github</a> 
                     &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a>  
            </span>
-           <span style="border-collapse:collapse; font-size:50%; text-align:justify; display: inline-block">
+           <span style="width: 70%;border-collapse:collapse; font-size:50%; text-align:justify; display: inline-block">
             <br />
             I am a Ph.D. student in Mathematics and Computer Science at <a href="http://cvn.centralesupelec.fr/">Centre de Vision Num&eacute;rique</a>, 
             <a href="http://www.centralesupelec.fr/">CentraleSup&eacute;lec</a>, 
