--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@ a {
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 15%; border: 0px;">
         </td>
         <td style="font-size:200%;background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 70%; border: 0px;">
-           Marie-Caroline Corbineau 
+           <div>
+               <br/><br/><br/>
+            Marie-Caroline Corbineau 
            <span style="font-size:60%; float:right;width: 70%"> 
                     <a href="https://github.com/mccorbineau">Github</a> 
                     &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a>  
@@ -47,6 +49,7 @@ a {
             image processing and applications related to aerospace engineering, in particular space science and Earth observation.
             More details about my background can be found in my resume [<a href="/CV_english.pdf">CV</a>]. 
            </span>
+           </div>
         </td>
        </tr>
       </tbody>
