--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ a {
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 15%; border: 0px;">
         </td>
         <td style="font-size:200%;background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 70%; border: 0px;">
-           <div>
+           <div style="float:left">
                <br/><br/><br/>
             Marie-Caroline Corbineau 
            <span style="font-size:60%; float:right;width: 70%"> 
