--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ a {
            <div style="text-align:left; width: 70%">
                <br/><br/><br/>
             Marie-Caroline Corbineau 
-           <span style="font-size:60%; float:right"> 
+           <span style="font-size:60%; float:right"> <br/>
                     <a href="https://github.com/mccorbineau">Github</a> 
                     &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a>  
            </span>
