--- a/index.html
+++ b/index.html
@@ -31,15 +31,12 @@ a {
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 15%; border: 0px;">
         </td>
         <td style="font-size:200%;background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 70%; border: 0px;">
-           <div style="text-align:left; width: 70%">
-               <br/><br/><br/>
-            Marie-Caroline Corbineau 
-           <span style="font-size:60%; float:right"> <br/>
-                    <a href="https://github.com/mccorbineau">Github</a> 
-                    &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a>  
-           </span>
-           <span style="border-collapse:collapse; font-size:50%; text-align:justify; display: inline-block">
-            <br />
+            <br/><br/><br/>
+            <div style="text-align:justify">
+               <span style="float:left">Marie-Caroline Corbineau</span>
+               <span style="float:right"><a href="https://github.com/mccorbineau">Github</a> 
+                    &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a> </span>
+               <span><br/> <br />
             I am a Ph.D. student in Mathematics and Computer Science at <a href="http://cvn.centralesupelec.fr/">Centre de Vision Num&eacute;rique</a>, 
             <a href="http://www.centralesupelec.fr/">CentraleSup&eacute;lec</a>, 
             <a href="http://universite-paris-saclay.fr/">Universit&eacute; Paris-Saclay</a>, France, 
@@ -47,9 +44,8 @@ a {
             <a href="http://www-syscom.univ-mlv.fr/~chouzeno/">Prof. Emilie Chouzenoux</a>. 
             My interests include applied mathematics, optimization algorithms, optimization-based neural networks, machine learning,
             image processing and applications related to aerospace engineering, in particular space science and Earth observation.
-            More details about my background can be found in my resume [<a href="/CV_english.pdf">CV</a>]. 
-           </span>
-           </div>
+            More details about my background can be found in my resume [<a href="/CV_english.pdf">CV</a>].  </span>
+            </div>
         </td>
        </tr>
       </tbody>
