--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ a {
         </td>
         <td style="font-size:200%;background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 70%; border: 0px;">
             <br/><br/><br/>
-            <div style="text-align:justify">
+            <div style="text-align:justify; width: 70%">
                <span style="float:left">Marie-Caroline Corbineau</span>
                <span style="float:right"><a href="https://github.com/mccorbineau">Github</a> 
                     &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a> </span>
