--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ a {
             <br/><br/><br/>
             <div style="text-align:justify; width: 70%">
                <span style="float:left">Marie-Caroline Corbineau</span>
-               <span style="float:right"><a href="https://github.com/mccorbineau">Github</a> 
+               <span style="float:right;font-size:60%"><a href="https://github.com/mccorbineau">Github</a> 
                     &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a> </span>
-               <span><br/> <br />
+               <span style="font-size:50%"><br/> <br />
             I am a Ph.D. student in Mathematics and Computer Science at <a href="http://cvn.centralesupelec.fr/">Centre de Vision Num&eacute;rique</a>, 
             <a href="http://www.centralesupelec.fr/">CentraleSup&eacute;lec</a>, 
             <a href="http://universite-paris-saclay.fr/">Universit&eacute; Paris-Saclay</a>, France, 
