--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@ a {
      </table>
 
         </td>
+           <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 15%; border: 0px;">
+        </td>
        </tr>
       </tbody>
     </table>
