--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@ a {
       <tbody>
           
        <tr>
-        <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 15%; border: 0px;">
+        <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 20%; border: 0px;">
         </td>
-        <td style="font-size:100%;background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 70%; border: 0px;">
+        <td style="font-size:100%;background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 60%; border: 0px;">
             <br/><br/><br/>
             <div style="text-align:justify">
                <span style="float:left;font-size:200%">Marie-Caroline Corbineau</span>
-               <span style="float:right;font-size:110%"><a href="https://github.com/mccorbineau">Github</a> 
+               <span style="float:right;font-size:110%"> <br/> <a href="https://github.com/mccorbineau">Github</a> 
                     &middot <a href="https://fr.linkedin.com/in/marie-caroline-corbineau-00944810b">LinkedIn</a> </span>
-               <span style="font-size:100%"><br/> <br />
+               <span style="font-size:100%"><br/> <br/> <br/>
             I am a Ph.D. student in Mathematics and Computer Science at <a href="http://cvn.centralesupelec.fr/">Centre de Vision Num&eacute;rique</a>, 
             <a href="http://www.centralesupelec.fr/">CentraleSup&eacute;lec</a>, 
             <a href="http://universite-paris-saclay.fr/">Universit&eacute; Paris-Saclay</a>, France, 
@@ -202,7 +202,7 @@ a {
      </table>
 
         </td>
-           <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 15%; border: 0px;">
+           <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 20%; border: 0px;">
         </td>
        </tr>
       </tbody>
