--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <TITLE>
 Marie-Caroline Corbineau | Centre de Vision Num&eacute;rique, CentraleSup&eacute;lec, Universit&eacute; Paris-Saclay
 </TITLE>
+{% seo %}
 </HEAD>
 <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway" rel="stylesheet"> 
 
