--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 
-<HTML>
-
-<HEAD>
-<TITLE>
+<html>
+    <meta> Marie-Caroline Corbineau personal webpage </meta>
+<head>
+<title>
 Marie-Caroline Corbineau | Centre de Vision Num&eacute;rique, CentraleSup&eacute;lec, Universit&eacute; Paris-Saclay
-</TITLE>
-</HEAD>
+</title>
+</head>
 <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway" rel="stylesheet"> 
 
 <style>
@@ -23,7 +23,7 @@ a {
 
 <!--  font-family: 'Pontano Sans', sans-serif;  -->
 
-<BODY>
+<body>
     <table style="width:100%; border-collapse:collapse; font-size:100%; text-align:justify">
       <tbody>
           
@@ -211,6 +211,6 @@ a {
     
     <hr />
 
-</BODY>
-</HTML>
+</body>
+</html>
 
