--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ a {
             <i>Marie-Caroline Corbineau, Denis Kouam&eacute, Emilie Chouzenoux, Jean-Yves Tourneret, Jean-Christophe Pesquet </i> (2019). 
             [<a href="https://arxiv.org/abs/1903.08111">arXiv</a>]
             [<a href="https://hal.archives-ouvertes.fr/hal-02073283v1">HAL</a>]
+            [<a href="https://github.com/mccorbineau/PP-ULA">code</a>]
         </td>
        </tr>
 
