--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ a {
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 90%; border: 0px;">
         <b>Preconditioned P-ULA for joint deconvolution-segmentation of ultrasound images </b>, 
             <i>Marie-Caroline Corbineau, Denis Kouam&eacute, Emilie Chouzenoux, Jean-Yves Tourneret, Jean-Christophe Pesquet </i> (2019). 
-            [<a href="https://arxiv.org/abs/1903.08111">arXiv</a>]
-            [<a href="https://hal.archives-ouvertes.fr/hal-02073283v1">HAL</a>]
+            [<a href="https://arxiv.org/abs/1903.08111">Extended version arXiv</a>]
+            [<a href="https://hal.archives-ouvertes.fr/hal-02073283">Extended version HAL</a>]
             [<a href="https://github.com/mccorbineau/PP-ULA">code</a>]
         </td>
        </tr>
