--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ a {
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 90%; border: 0px;">
         <b>Deep unfolding of a proximal interior point method for image restoration&ast;</b>, 
             <i>Carla Bertocchi, Emilie Chouzenoux, Marie-Caroline Corbineau, Jean-Christophe Pesquet, Marco Prato </i> (2018). 
-            [<a href="https://arxiv.org/abs/1812.04276">arXiv</a>][<a href="https://hal.archives-ouvertes.fr/hal-01943475">HAL</a>]
+            [<a href="https://hal.archives-ouvertes.fr/hal-01943475/document">pdf</a>]
         </td>
        </tr>
           
@@ -226,7 +226,7 @@ a {
         <b>Deep unfolding of a proximal interior point algorithm for image restoration </b>, 
             Mini-symposium "MS-24 From inverse problems to machine learning and back", Applied Inverse Problems Conference (AIP).
             Grenoble, France, 8 July 2019. 
-            [<a href="https://www.aip2019-grenoble.fr/en/programme/minisymposia">abstract</a>]  
+            [<a href="https://www.aip2019-grenoble.fr/en/programme/minisymposia">abstract</a>] [<a href="/iRestNet_2019_presentation.pdf">slides</a>]  
         </td>
        </tr>
           
