--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@ a {
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 90%; border: 0px;">
         <b>Deep unfolding of a proximal interior point method for image restoration&ast;</b>, 
             <i>Carla Bertocchi, Emilie Chouzenoux, Marie-Caroline Corbineau, Jean-Christophe Pesquet, Marco Prato </i> (2018). 
-            [<a href="https://hal.archives-ouvertes.fr/hal-01943475/document">pdf</a>]
+            [<a href="https://arxiv.org/abs/1812.04276">arXiv</a>]
+            [<a href="https://hal.archives-ouvertes.fr/hal-01943475/document">HAL</a>]
+            
         </td>
        </tr>
           
