--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ a {
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 90%; border: 0px;">
         <b>Preconditioned P-ULA for joint deconvolution-segmentation of ultrasound images </b>, 
             <i>Marie-Caroline Corbineau, Denis Kouam&eacute, Emilie Chouzenoux, Jean-Yves Tourneret, Jean-Christophe Pesquet </i>. 
-            In IEEE Signal Processing Letters, pp.1456-1460, doi:10.1109/LSP.2019.2935610 (2019). 
+            In IEEE Signal Processing Letters, vol.26, no.10, pp.1456-1460, doi:10.1109/LSP.2019.2935610 (2019). 
             [<a href="https://ieeexplore.ieee.org/document/8801938">Article</a>]
             [<a href="https://arxiv.org/abs/1903.08111">Extended version-PDF</a>]
             <!--[<a href="https://hal.archives-ouvertes.fr/hal-02073283">Extended version HAL</a>]-->
