--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@ a {
         </td>
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 90%; border: 0px;">
         <b>Deep unfolding of a proximal interior point method for image restoration&ast;</b>, 
-            <i>Carla Bertocchi, Emilie Chouzenoux, Marie-Caroline Corbineau, Jean-Christophe Pesquet, Marco Prato </i> (2019) (Accepted in Inverse Problems). 
+            <i>Carla Bertocchi, Emilie Chouzenoux, Marie-Caroline Corbineau, Jean-Christophe Pesquet, Marco Prato </i> 
+            To appear in Inverse Problems, doi:10.1088/1361-6420/ab460a (2019). 
             [<a href="https://arxiv.org/abs/1812.04276">PDF</a>]
             <!--[<a href="https://hal.archives-ouvertes.fr/hal-01943475/document">HAL</a>]-->
             
@@ -111,7 +112,9 @@ a {
         <b>Learned image deblurring by unfolding a proximal interior point algorithm </b>, 
             <i>Marie-Caroline Corbineau, Carla Bertocchi, Emilie Chouzenoux, Marco prato, Jean-Christophe Pesquet </i>.
             In Proceedings of the 26th IEEE International Conference on Image processing (ICIP).
-            Taipei, Ta&iuml;wan, September 2019 <i>(forthcoming)</i>.
+            Taipei, Ta&iuml;wan, September 2019.
+             [<a href="https://ieeexplore.ieee.org/document/8803438">Proceedings</a>]
+             [<a href="https://hal.archives-ouvertes.fr/hal-02303511v1">PDF</a>]
         </td>
        </tr>
           
