--- a/index.html
+++ b/index.html
@@ -230,6 +230,18 @@ a {
         </td>
         <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 90%; border: 0px;">
         <b>Deep unfolding of a proximal interior point algorithm for image restoration </b>, 
+            Workshop "Regularisation for inverse problems & machine learning".
+            Jussieu, Paris, France, 19 November 2019. 
+            [<a href="https://invprob-ml-workshop.github.io/">abstract</a>] [<a href="/presentation_workshop_Jussieu_nov_2019.pdf">slides</a>]  
+        </td>
+       </tr>
+          
+          <tr>
+        <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 10%; border: 0px;">
+        
+        </td>
+        <td style="background-color:white; border-collapse:collapse; padding: 5px; vertical-align: top; width: 90%; border: 0px;">
+        <b>Deep unfolding of a proximal interior point algorithm for image restoration </b>, 
             Mini-symposium "MS-24 From inverse problems to machine learning and back", Applied Inverse Problems Conference (AIP).
             Grenoble, France, 8 July 2019. 
             [<a href="https://www.aip2019-grenoble.fr/en/programme/minisymposia">abstract</a>] [<a href="/iRestNet_2019_presentation.pdf">slides</a>]  
