--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ a {
             <a href="http://www-syscom.univ-mlv.fr/~chouzeno/">Prof. Emilie Chouzenoux</a>. 
             My interests include applied mathematics, optimization algorithms, optimization-based neural networks, machine learning,
             image processing and applications related to aerospace engineering, in particular space science and Earth observation.
-            More details about my background can be found in my resume [<a href="/CV_english.pdf">CV</a>].  </span>
+            More details about my background can be found in my resume [<a href="/CV_english.pdf">CV english</a>][<a href="/CV_francais.pdf">CV français</a>].  </span>
             </div>
     
          <h3>Published or Accepted Journal Articles</h3>
